StreamTV-Containers/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streamtv
  labels:
    name: streamtv
    app: streamtv
